@@ -5,10 +5,18 @@ DESTDIR?=/
 
 .PHONY : all clean install
 
+ifeq ($(WITH_PYTHON),yes)
 all : mosquitto.pyc
+else
+all :
+endif
 
+ifeq ($(WITH_PYTHON),yes)
 install : all
 	python ./setup.py install --prefix=${prefix} --root=${DESTDIR}
+else
+install :
+endif
 
 mosquitto.pyc : mosquitto.py
 	python ./setup.py build
