@@ -45,6 +45,7 @@ Client library:
   #1163348.
 - Fix possible crash after disconnects when using the threaded interface with
   TLS.
+- Allow build/install without Python. Closes bug #1174972.
 
 1.1.3 - 20130211
 ================
